# server/mcp/openapi.json
@@ -5307,6 +5307,10 @@
             "description": "Battery optimizer is enabled.",
             "type": "boolean"
           },
+          "optimizerAutomatic": {
+            "description": "Optimizer controls the devices instead of only advising.",
+            "type": "boolean"
+          },
           "optimizerChargingStrategy": {
             "description": "Selected battery optimizer charging strategy.",
             "type": "string"
